--- a/index.html
+++ b/index.html
@@ -4,11 +4,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MeinKoch-DO</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.1/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
-<body>
+<body class="">
+    <nav class="">
+        <div class="navbar bg-gradient-to-r from-cyan-500 to-blue-500 ">
+            <div class="navbar-start">
+                <div class="dropdown">
+                    <label tabindex="0" class="btn btn-ghost lg:hidden">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M4 6h16M4 12h8m-8 6h16" />
+                        </svg>
+                    </label>
+                    <ul tabindex="0"
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 lg:text-xl font-bold">
 
+                        <li><a>HOME</a></li>
+                        <li><a>MENÜ</a></li>
+                        <li><a>ABOUT</a></li>
+                        <li><a>BUCHEN</a></li>
+                    </ul>
+                </div>
+                <a
+                    class="lg:text-4xl text-lg font-extrabold text-white shadow-2xl rounded-2xl lg:p-2 p-1 ">MeinKoch-DO</a>
+            </div>
+            <div class="navbar-center hidden lg:flex">
+                <ul class="menu menu-horizontal px-1 text-xl font-bold  rounded-md text-white">
+                    <li><a class="bg-gradient-to-r from-cyan-500 to-blue-500 mr-2">HOME</a></li>
+                    <li><a class="bg-gradient-to-r from-cyan-500 to-blue-500 mr-2">MENÜ</a></li>
+                    <li><a class="bg-gradient-to-r from-cyan-500 to-blue-500 mr-2">ABOUT</a></li>
+                    <li><a class="bg-gradient-to-r from-cyan-500 to-blue-500">BUCHEN</a></li>
+                </ul>
+            </div>
+            <div class="navbar-end ">
+                <a
+                    class="btn bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500 lg:text-xl font-bold text-white">KONTAKT</a>
+            </div>
+        </div>
+    </nav>
+
+    <header>
+
+    </header>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
