--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </svg>
                     </label>
                     <ul tabindex="0"
-                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 lg:text-xl font-bold">
+                        class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 lg:text-xl font-bold bg-gradient-to-r from-cyan-500 to-blue-500 text-white ">
 
                         <li><a>HOME</a></li>
                         <li><a>MENÜ</a></li>
@@ -36,10 +36,10 @@
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1 text-xl font-bold  rounded-md text-white">
-                    <li><a class="bg-gradient-to-r from-cyan-500 to-blue-500 mr-2">HOME</a></li>
-                    <li><a class="bg-gradient-to-r from-cyan-500 to-blue-500 mr-2">MENÜ</a></li>
-                    <li><a class="bg-gradient-to-r from-cyan-500 to-blue-500 mr-2">ABOUT</a></li>
-                    <li><a class="bg-gradient-to-r from-cyan-500 to-blue-500">BUCHEN</a></li>
+                    <li><a class=" mr-2">HOME</a></li>
+                    <li><a class=" mr-2">MENÜ</a></li>
+                    <li><a class=" mr-2">ABOUT</a></li>
+                    <li><a class="">BUCHEN</a></li>
                 </ul>
             </div>
             <div class="navbar-end ">
@@ -50,11 +50,133 @@
     </nav>
 
     <header>
+        <!-- Hero Section -->
+        <div class="hero min-h-screen" style="background-image: url(images/sushi-596930_1920.jpg)">
+            <div class="hero-overlay bg-opacity-40"></div>
+            <div class="hero-content text-center text-neutral-content">
+                <div class="max-w-2xl">
+                    <h1 class="mb-5 text-6xl font-bold">Hello there</h1>
+                    <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                        exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                    <button class="btn btn-primary">Get Started</button>
+                </div>
+            </div>
+        </div>
+        <!-- Hero Section end -->
+        <!-- About Section -->
+        <div class="lg:flex justify-center items-center gap-10 bg-base-100 shadow-xl lg:p-10 p-5 ">
+            <div class="lg:w-[50%]">
+                <figure><img class="rounded-xl" src="images/chef-5993951_1920.jpg" alt="Movie" /></figure>
+            </div>
+            <div class=" lg:w-[50%] mt-5">
+                <h2 class="card-title">New movie is released!</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi labore, inventore quos illo assumenda
+                    sint, tenetur minus, veniam enim deserunt sit natus exercitationem! Est, expedita! Minima ea
+                    accusantium molestias maxime reiciendis labore fuga eveniet? Impedit, earum vero iusto possimus
+                    accusamus eius! Quas molestias facilis esse incidunt non animi odio ab. Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Doloribus consequatur repudiandae amet numquam vel iste, ullam esse
+                    alias, quia corporis fugit maxime aut dolore velit? Tempore quod enim impedit, hic placeat minus?
+                    Magni neque labore tempora laudantium, alias quos eos ducimus quisquam architecto magnam sint,
+                    officiis molestiae reprehenderit consectetur fuga.</p>
 
+            </div>
+        </div>
+
+        <!-- About Section End-->
+
+
+        <!-- Photos Section -->
+
+        <div class=" flex justify-center gap-5 p-10">
+            <div class="gap-5 mt-5">
+                <div><img src="images/1.jpg" alt=""></div>
+                <div class="mt-5"><img src="images/2.jpg" alt=""></div>
+
+            </div>
+            <div>
+                <div><img src="images/3.jpg" alt=""></div>
+                <div class="mt-5"><img src="images/4.jpg" alt=""></div>
+            </div>
+        </div>
+        <!-- Photos Section End -->
+        <!-- Photo Section 2 -->
+
+        <!-- Photo Section 2 -->
+
+        <!-- contact Section -->
+        <section>
+
+            <div class="hero min-h-screen bg-base-200">
+                <div class="hero-content flex-col lg:flex-row-reverse">
+                    <div class="text-center lg:text-left">
+                        <h1 class="text-5xl font-bold">Login now!</h1>
+                        <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                            exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                    </div>
+                    <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+                        <div class="card-body">
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Email</span>
+                                </label>
+                                <input type="text" placeholder="email" class="input input-bordered" />
+                            </div>
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Password</span>
+                                </label>
+                                <input type="text" placeholder="password" class="input input-bordered" />
+                                <label class="label">
+                                    <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
+                                </label>
+                            </div>
+                            <div class="form-control mt-6">
+                                <button class="btn btn-primary">Login</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- contact Section end -->
     </header>
 
     <footer>
-
+        <footer class="footer p-10 bg-base-200 text-base-content bg-gradient-to-r from-cyan-500 to-blue-500">
+            <div>
+                <span class="footer-title">Services</span>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </div>
+            <div>
+                <span class="footer-title">Company</span>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </div>
+            <div>
+                <span class="footer-title">Legal</span>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </div>
+            <div>
+                <span class="footer-title">Newsletter</span>
+                <div class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text">Enter your email address</span>
+                    </label>
+                    <div class="relative">
+                        <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" />
+                        <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </footer>
 </body>
 
