--- a/index.html
+++ b/index.html
@@ -87,17 +87,16 @@
 
         <!-- Photos Section -->
 
-        <div class=" flex justify-center gap-5 p-10">
-            <div class="gap-5 mt-5">
-                <div><img src="images/1.jpg" alt=""></div>
-                <div class="mt-5"><img src="images/2.jpg" alt=""></div>
+        <div class=" grid grid-cols-2 grid-rows-2  p-5 lg:p-40">
+            <div class=""><img class="rounded-lg w-11/12 h-[82%]" src="images/1.jpg" alt=""></div>
+            <div class=" h-20 w-auto "><img class="rounded-lg" src="images/4.jpg" alt=""></div>
+            <div class=" h-20 w-auto"><img class="rounded-lg w-11/12 " src="images/2.jpg" alt=""></div>
+            <div class=" h-20 w-auto"><img class="rounded-lg" src="images/3.jpg" alt=""></div>
 
-            </div>
-            <div>
-                <div><img src="images/3.jpg" alt=""></div>
-                <div class="mt-5"><img src="images/4.jpg" alt=""></div>
-            </div>
+
+
         </div>
+
         <!-- Photos Section End -->
         <!-- Photo Section 2 -->
 
@@ -107,31 +106,46 @@
         <section>
 
             <div class="hero min-h-screen bg-base-200">
-                <div class="hero-content flex-col lg:flex-row-reverse">
+                <div class="hero-content flex-col lg:flex-row-reverse lg:w-full ">
                     <div class="text-center lg:text-left">
-                        <h1 class="text-5xl font-bold">Login now!</h1>
-                        <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
-                            exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                        <h1 class="text-5xl font-bold">KONTAKT</h1>
+                        <p class="py-6">Kontaktieren Sie mich gerne über dieses Formular. Schreiben Sie mir
+                            einfach Ihre
+                            Fragen oder Anregungen – ich werde Ihre Anfrage so schnell wie möglich bearbeiten.
+                        </p>
                     </div>
-                    <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+                    <div class="card flex-shrink-0 lg:w-full max-w-4xl shadow-2xl bg-base-100">
                         <div class="card-body">
+                            <div class="form-control">
+                                <label class="label">
+                                    <span class="label-text">Name</span>
+                                </label>
+                                <input type="text" placeholder="Name" class="input input-bordered" />
+                            </div>
                             <div class="form-control">
                                 <label class="label">
                                     <span class="label-text">Email</span>
                                 </label>
-                                <input type="text" placeholder="email" class="input input-bordered" />
+                                <input type="text" placeholder="E-mail" class="input input-bordered" />
                             </div>
                             <div class="form-control">
                                 <label class="label">
-                                    <span class="label-text">Password</span>
+                                    <span class="label-text">Betreff</span>
                                 </label>
-                                <input type="text" placeholder="password" class="input input-bordered" />
+                                <input type="text" placeholder="Betreff" class="input input-bordered" />
+                            </div>
+                            <div class="form-control">
                                 <label class="label">
-                                    <a href="#" class="label-text-alt link link-hover">Forgot password?</a>
+                                    <span class="label-text">Text</span>
                                 </label>
+
+
+                                <textarea name="text" placeholder="Text" id="" cols="30" rows="10"
+                                    class="input input-bordered"></textarea>
                             </div>
                             <div class="form-control mt-6">
-                                <button class="btn btn-primary">Login</button>
+                                <button
+                                    class="btn text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500">SENDENS</button>
                             </div>
                         </div>
                     </div>
@@ -172,7 +186,8 @@
                     </label>
                     <div class="relative">
                         <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" />
-                        <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+                        <button
+                            class="btn btn-primary absolute top-0 right-0 rounded-l-none hover:from-pink-500 hover:to-yellow-500">Subscribe</button>
                     </div>
                 </div>
             </div>
