--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     class="lg:text-4xl text-lg font-extrabold text-white shadow-2xl rounded-2xl lg:p-2 p-1 ">MeinKoch-DO</a>
             </div>
             <div class="navbar-center hidden lg:flex">
-                <ul class="menu menu-horizontal px-1 text-xl font-bold  rounded-md text-white">
+                <ul class="menu menu-horizontal px-1 text-lg font-bold  rounded-md text-white">
                     <li><a class=" mr-2">HOME</a></li>
                     <li><a class=" mr-2">MENÜ</a></li>
                     <li><a class=" mr-2">ABOUT</a></li>
@@ -44,7 +44,7 @@
             </div>
             <div class="navbar-end ">
                 <a
-                    class="btn bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500 lg:text-xl font-bold text-white">KONTAKT</a>
+                    class="btn bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500 lg:text-lg font-bold text-white">KONTAKT</a>
             </div>
         </div>
     </nav>
@@ -87,16 +87,96 @@
 
         <!-- Photos Section -->
 
-        <div class=" grid grid-cols-2 grid-rows-2  p-5 lg:p-40">
-            <div class=""><img class="rounded-lg w-11/12 h-[82%]" src="images/1.jpg" alt=""></div>
-            <div class=" h-20 w-auto "><img class="rounded-lg" src="images/4.jpg" alt=""></div>
-            <div class=" h-20 w-auto"><img class="rounded-lg w-11/12 " src="images/2.jpg" alt=""></div>
-            <div class=" h-20 w-auto"><img class="rounded-lg" src="images/3.jpg" alt=""></div>
+        <div class="lg:flex justify-center items-center">
+            <div class="w-full">
+                <div class=" grid grid-cols-2  gap-2 p-5 lg:p-20">
+                    <div class=""><img class="rounded-lg " src="images/7.jpg" alt=""></div>
+                    <div class="  "><img class="rounded-lg" src="images/8.jpg" alt=""></div>
+                    <div class=""><img class="rounded-lg  " src="images/9.jpg" alt="">
+                    </div>
+                    <div class=" "><img class="rounded-lg" src="images/10.jpg" alt=""></div>
+                </div>
+            </div>
+            <div class="w-full p-5">
+                <div>
+                    <p class="text-2xl text-cyan-500">Popular Menu</p>
+                    <h3 class="text-3xl font-bold mt-5 mb-5">Variety of Flavours from Japanese Cuisine</h3>
+                </div>
+                <div>
+                    <hr>
+                    <div class="flex justify-between gap-2">
 
+                        <div class="text-2xl mb-3">Kamage Udon Family</div>
+                        <div class="pr-5 text-2xl">$45</div>
+                    </div>
+                    <p class="w-[85%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quos?Lorem ipsum
+                        dolor sit amet
+                        consectetur, adipisicing elit. Et, hic?</p>
+                    <hr>
+                </div>
+                <div>
+                    <hr>
+                    <div class="flex justify-between gap-2">
 
+                        <div class="text-2xl mb-3">Kamage Udon Family</div>
+                        <div class="pr-5 text-2xl">$45</div>
+                    </div>
+                    <p class="w-[85%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quos?Lorem ipsum
+                        dolor sit amet
+                        consectetur, adipisicing elit. Et, hic?</p>
+                    <hr>
+                </div>
+                <div>
+                    <hr>
+                    <div class="flex justify-between gap-2">
 
+                        <div class="text-2xl mb-3">Kamage Udon Family</div>
+                        <div class="pr-5 text-2xl">$45</div>
+                    </div>
+                    <p class="w-[85%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quos?Lorem ipsum
+                        dolor sit amet
+                        consectetur, adipisicing elit. Et, hic?</p>
+                    <hr>
+                </div>
+                <div>
+                    <hr>
+                    <div class="flex justify-between gap-2">
+
+                        <div class="text-2xl mb-3">Kamage Udon Family</div>
+                        <div class="pr-5 text-2xl">$45</div>
+                    </div>
+                    <p class="w-[85%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quos?Lorem ipsum
+                        dolor sit amet
+                        consectetur, adipisicing elit. Et, hic?</p>
+                    <hr>
+                </div>
+                <div>
+                    <hr>
+                    <div class="flex justify-between gap-2">
+
+                        <div class="text-2xl mb-3">Kamage Udon Family</div>
+                        <div class="pr-5 text-2xl">$45</div>
+                    </div>
+                    <p class="w-[85%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quos?Lorem ipsum
+                        dolor sit amet
+                        consectetur, adipisicing elit. Et, hic?</p>
+                    <hr>
+                </div>
+                <div>
+                    <hr>
+                    <div class="flex justify-between gap-2">
+
+                        <div class="text-2xl mb-3">Kamage Udon Family</div>
+                        <div class="pr-5 text-2xl">$45</div>
+                    </div>
+                    <p class="w-[85%]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, quos?Lorem ipsum
+                        dolor sit amet
+                        consectetur, adipisicing elit. Et, hic?</p>
+                    <hr>
+                </div>
+
+            </div>
         </div>
-
         <!-- Photos Section End -->
         <!-- Photo Section 2 -->
 
@@ -187,7 +267,7 @@
                     <div class="relative">
                         <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" />
                         <button
-                            class="btn btn-primary absolute top-0 right-0 rounded-l-none hover:from-pink-500 hover:to-yellow-500">Subscribe</button>
+                            class="btn btn-primary border-none bg-gradient-to-r from-cyan-500 absolute top-0 right-0 rounded-l-none hover:from-pink-500 hover:to-yellow-500">Subscribe</button>
                     </div>
                 </div>
             </div>
