--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 
 <body class="">
-    <nav class="">
+    <nav id="home" class=" ">
         <div class="navbar bg-gradient-to-r from-cyan-500 to-blue-500 ">
             <div class="navbar-start">
                 <div class="dropdown">
-                    <label tabindex="0" class="btn btn-ghost lg:hidden">
+                    <label tabindex="0" class="btn btn-ghost  lg:hidden">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-white" fill="none"
                             viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -25,10 +25,10 @@
                     <ul tabindex="0"
                         class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 lg:text-xl font-bold bg-gradient-to-r from-cyan-500 to-blue-500 text-white ">
 
-                        <li><a>HOME</a></li>
-                        <li><a>MENÜ</a></li>
-                        <li><a>ABOUT</a></li>
-                        <li><a>BUCHEN</a></li>
+                        <li><a class="mr-2" href="#home">HOME</a></li>
+                        <li><a class=" mr-2 " href="#menü">MENÜ</a></li>
+                        <li><a class=" mr-2" href="#about">ABOUT</a></li>
+                        <li><a class="" href="#buchen">BUCHEN</a></li>
                     </ul>
                 </div>
                 <a
@@ -36,10 +36,10 @@
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1 text-lg font-bold  rounded-md text-white">
-                    <li><a class=" mr-2">HOME</a></li>
-                    <li><a class=" mr-2">MENÜ</a></li>
-                    <li><a class=" mr-2">ABOUT</a></li>
-                    <li><a class="">BUCHEN</a></li>
+                    <li><a class="mr-2" href="#home">HOME</a></li>
+                    <li><a class=" mr-2 " href="#menü">MENÜ</a></li>
+                    <li><a class=" mr-2" href="#about">ABOUT</a></li>
+                    <li><a class="" href="#buchen">BUCHEN</a></li>
                 </ul>
             </div>
             <div class="navbar-end ">
@@ -58,13 +58,14 @@
                     <h1 class="mb-5 text-6xl font-bold">Hello there</h1>
                     <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
                         exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-                    <button class="btn btn-primary">Get Started</button>
+                    <button class="btn btn-primary bg-gradient-to-r from-cyan-500 hover:from-pink-500
+                    hover:to-yellow-500 border-none">Get Started</button>
                 </div>
             </div>
         </div>
         <!-- Hero Section end -->
         <!-- About Section -->
-        <div class="lg:flex justify-center items-center gap-10 bg-base-100 shadow-xl lg:p-10 p-5 ">
+        <div id="about" class="lg:flex justify-center items-center gap-10 bg-base-100 shadow-xl lg:p-10 p-5 ">
             <div class="lg:w-[50%]">
                 <figure><img class="rounded-xl" src="images/chef-5993951_1920.jpg" alt="Movie" /></figure>
             </div>
@@ -87,7 +88,7 @@
 
         <!-- Photos Section -->
 
-        <div class="lg:flex justify-center items-center">
+        <div id="menü" class="lg:flex justify-center items-center">
             <div class="w-full">
                 <div class=" grid grid-cols-2  gap-2 p-5 lg:p-20">
                     <div class=""><img class="rounded-lg " src="images/7.jpg" alt=""></div>
@@ -183,7 +184,7 @@
         <!-- Photo Section 2 -->
 
         <!-- contact Section -->
-        <section>
+        <section id="buchen">
 
             <div class="hero min-h-screen bg-base-200">
                 <div class="hero-content flex-col lg:flex-row-reverse lg:w-full ">
