--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                                 </label>
 
 
-                                <textarea name="text" placeholder="Text" id="" cols="30" rows="10"
-                                    class="input input-bordered"></textarea>
+                                <textarea name="text" placeholder="Text" id="" cols="25" rows="10"
+                                    class="input input-bordered h-20"></textarea>
                             </div>
                             <div class="form-control mt-6">
                                 <button
