--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </ul>
             </div>
             <div class="navbar-end ">
-                <a
-                    class="btn bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500 lg:text-lg font-bold text-white">KONTAKT</a>
+                <button
+                    class="btn text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500">KONTAKT</button>
             </div>
         </div>
     </nav>
@@ -226,7 +226,7 @@
                             </div>
                             <div class="form-control mt-6">
                                 <button
-                                    class="btn text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500">SENDENS</button>
+                                    class="btn text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500">SENDEN</button>
                             </div>
                         </div>
                     </div>
