--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </ul>
                 </div>
                 <a
-                    class="lg:text-4xl text-lg font-extrabold text-white shadow-2xl rounded-2xl lg:p-2 p-1 ">MeinKoch-DO</a>
+                    class="lg:text-4xl  lg:font-extrabold text-white  lg:rounded-2xl lg:p-2  text-base text-transparent bg-clip-text bg-gradient-to-t from-blue-400 to-purple-400 ">MeinKoch-DO</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1 text-lg font-bold  rounded-md text-white">
@@ -44,7 +44,8 @@
             </div>
             <div class="navbar-end ">
                 <button
-                    class="btn text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500">KONTAKT</button>
+                    class="btn text-white bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500"><a
+                        href="#kontakt">KONTAKT</a></button>
             </div>
         </div>
     </nav>
@@ -184,7 +185,7 @@
         <!-- Photo Section 2 -->
 
         <!-- contact Section -->
-        <section id="buchen">
+        <section id="kontakt">
 
             <div class="hero min-h-screen bg-base-200">
                 <div class="hero-content flex-col lg:flex-row-reverse lg:w-full ">
@@ -195,7 +196,7 @@
                             Fragen oder Anregungen – ich werde Ihre Anfrage so schnell wie möglich bearbeiten.
                         </p>
                     </div>
-                    <div class="card flex-shrink-0 lg:w-full max-w-4xl shadow-2xl bg-base-100">
+                    <div class="card flex-shrink-0 lg:w-full max-w-2xl shadow-2xl bg-base-100">
                         <div class="card-body">
                             <div class="form-control">
                                 <label class="label">
