--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </ul>
                 </div>
                 <a
-                    class="lg:text-4xl  lg:font-extrabold text-white  lg:rounded-2xl lg:p-2  text-base text-transparent bg-clip-text bg-gradient-to-t from-blue-400 to-purple-400 ">MeinKoch-DO</a>
+                    class="lg:text-4xl  lg:font-extrabold text-white font-bold  lg:rounded-2xl lg:p-2  text-base text-transparent bg-clip-text bg-gradient-to-t from-blue-400 to-purple-400 ">MeinKoch-DO</a>
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1 text-lg font-bold  rounded-md text-white">
